<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    android:fitsSystemWindows="true"
    tools:context=".activity.ConfiguracoesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/old_email"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_margin="5dp"
            android:background="@drawable/fundotela"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_margin="5dp"
            android:background="@drawable/fundotela"
            android:hint="@string/hint_new_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_margin="5dp"
            android:background="@drawable/fundotela"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:imeActionId="@integer/customImeActionId"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"/>

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_margin="5dp"
            android:background="@drawable/fundotela"
            android:focusableInTouchMode="true"
            android:hint="@string/new_password"
            android:imeActionId="@integer/customImeActionId"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" android:textColorHint="@color/white"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"/>

        <Button
            android:id="@+id/changeEmail"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/botaocustomizado"
            android:text="@string/change_email"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/changePass"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/botaocustomizado"
            android:hint="@string/change_password1"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/send"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/botaocustomizado"
            android:text="@string/send_password_reset_email"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />

        <!--Novas modificações -->
        <Button
            android:id="@+id/change_email_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_password_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sending_pass_reset_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/send_password_reset_email"
            android:textStyle="bold" />
        <!-- Até aqui -->

        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_out"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>